<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kongqw="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="30dp"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/msgs"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textAlignment="center"
        android:textSize="20sp" />


    <com.example.rm.views.RockerView
        android:id="@+id/rockerView_left"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        kongqw:areaBackground="@drawable/default_area_bg"
        kongqw:rockerBackground="@drawable/default_rocker_bg"
        kongqw:rockerRadius="30dp" />


<!--    <TextView-->
<!--        android:id="@+id/tip_left"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@id/log_left"-->
<!--        android:text="支持8个方向的摇杆\n自定义Shape" />-->

    <com.example.rm.views.RockerView
        android:id="@+id/rockerView_right"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        kongqw:areaBackground="@mipmap/view_big"
        kongqw:rockerBackground="@mipmap/view_small"
        kongqw:rockerRadius="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preservation"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp"/>
<!--            style="?android:attr/buttonBarButtonStyle" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btn_fineCtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/finectl"/>

        <Button
            android:id="@+id/btn_imu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imu"
            android:textSize="20sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        电量显示-->

<!--        <TextView-->
<!--            android:id="@+id/power_show"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/power"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:textColor="#F80707"-->
<!--            android:textSize="20sp" />-->
    </RelativeLayout>

    <!--    <TextView-->
<!--        android:id="@+id/tip_right"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@id/log_right"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:text="获取到摇动角度（可自定义方向）\n自定义图片" />-->

<!--    <com.example.rm.views.RockerView-->
<!--        android:id="@+id/rockerView_center"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        kongqw:areaBackground="#FF333333"-->
<!--        kongqw:rockerBackground="#FF987654"-->
<!--        kongqw:rockerRadius="15dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/tip_center"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_below="@id/rockerView_center"-->
<!--        android:text="自定义色值" />-->
</RelativeLayout>
